--- a/complete/titanic/submission.ipynb
+++ b/complete/titanic/submission.ipynb
@@ -6,29 +6,47 @@
    "source": [
     "# Score 79.904%\n",
     "\n",
-    "Huge thank you to [Minsuk Heo](https://github.com/minsuk-heo)!\n",
+    "Huge thank you to [Minsuk Heo](https://github.com/minsuk-heo) ([his work](https://github.com/minsuk-heo/kaggle-titanic/blob/master/titanic-solution.ipynb)) and [Yassine Ghouzam](https://www.kaggle.com/yassineghouzam) ([his work](https://www.kaggle.com/yassineghouzam/titanic-top-4-with-ensemble-modeling))!\n",
     "\n",
-    "Most of this is his [work](https://github.com/minsuk-heo/kaggle-titanic/blob/master/titanic-solution.ipynb), I hope to expand on this in future submissions"
+    "A lot of this work was inspired by them\n",
+    "\n",
+    "### Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Imports and loading data"
+    "### Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.svm import SVC\n",
-    "\n",
     "train = pd.read_csv('/Users/pbezuhov/git/Kaggle/data/titanic/train.csv')\n",
-    "test = pd.read_csv('/Users/pbezuhov/git/Kaggle/data/titanic/test.csv')"
+    "test  = pd.read_csv('/Users/pbezuhov/git/Kaggle/data/titanic/test.csv')\n",
+    "\n",
+    "full  = pd.concat([train, test], axis=0).reset_index(drop=True)\n",
+    "\n",
+    "train_N = len(train)\n",
+    "del train, test\n",
+    "\n",
+    "full = full.fillna(np.nan)"
    ]
   },
   {
@@ -40,27 +58,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "full_data = [train, test]\n",
+    "full['Title'] = full['Name'].str.extract(' ([A-Za-z]+)\\.', expand=False)\n",
     "\n",
-    "for dataset in full_data:\n",
-    "    dataset['Title'] = dataset['Name'].str.extract(' ([A-Za-z]+)\\.', expand=False)\n",
+    "title_mapping = {\"Mr\": 0, \"Miss\": 1, \"Mrs\": 1, \"Mlle\": 1, \"Mme\": 1, \"Ms\": 3,\n",
+    "                 \"Master\": 2, \"Dr\": 3, \"Rev\": 3, \"Col\": 3, \"Major\": 3 ,\"Countess\": 3,\n",
+    "                 \"Lady\": 3, \"Jonkheer\": 3, \"Don\": 3, \"Dona\" : 3,\"Capt\": 3,\"Sir\": 3 }\n",
     "\n",
-    "title_mapping = {\"Mr\": 0, \"Miss\": 1, \"Mrs\": 2, \n",
-    "                 \"Master\": 3, \"Dr\": 3, \"Rev\": 3, \"Col\": 3, \"Major\": 3, \"Mlle\": 3,\"Countess\": 3,\n",
-    "                 \"Ms\": 3, \"Lady\": 3, \"Jonkheer\": 3, \"Don\": 3, \"Dona\" : 3, \"Mme\": 3,\"Capt\": 3,\"Sir\": 3 }\n",
-    "for dataset in full_data:\n",
-    "    dataset['Title'] = dataset['Title'].map(title_mapping)\n",
+    "full['Title'] = full['Title'].map(title_mapping)\n",
     "    \n",
     "# delete unnecessary feature from dataset\n",
-    "training_data.drop('Name', axis=1, inplace=True)\n",
-    "testing_data.drop('Name', axis=1, inplace=True)"
+    "full.drop('Name', axis=1, inplace=True)"
    ]
   },
   {
@@ -72,169 +85,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "sex_mapping = {\"male\": 0, \"female\": 1}\n",
-    "for dataset in full_data:\n",
-    "    dataset['Sex'] = dataset['Sex'].map(sex_mapping)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
-       "      <th>Title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>A/5 21171</td>\n",
-       "      <td>7.2500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>PC 17599</td>\n",
-       "      <td>71.2833</td>\n",
-       "      <td>C85</td>\n",
-       "      <td>C</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>STON/O2. 3101282</td>\n",
-       "      <td>7.9250</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>113803</td>\n",
-       "      <td>53.1000</td>\n",
-       "      <td>C123</td>\n",
-       "      <td>S</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>373450</td>\n",
-       "      <td>8.0500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   PassengerId  Survived  Pclass  Sex   Age  SibSp  Parch            Ticket  \\\n",
-       "0            1         0       3    0  22.0      1      0         A/5 21171   \n",
-       "1            2         1       1    1  38.0      1      0          PC 17599   \n",
-       "2            3         1       3    1  26.0      0      0  STON/O2. 3101282   \n",
-       "3            4         1       1    1  35.0      1      0            113803   \n",
-       "4            5         0       3    0  35.0      0      0            373450   \n",
-       "\n",
-       "      Fare Cabin Embarked  Title  \n",
-       "0   7.2500   NaN        S      0  \n",
-       "1  71.2833   C85        C      2  \n",
-       "2   7.9250   NaN        S      1  \n",
-       "3  53.1000  C123        S      2  \n",
-       "4   8.0500   NaN        S      0  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "training_data.head(5)"
+    "\n",
+    "full['Sex'] = full['Sex'].map(sex_mapping)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Fill in empty ages with the median value from the group\n",
-    "\n",
-    "- It might help to add a column to the table saying which data I affected"
+    "# Fill NaN values"
    ]
   },
   {
@@ -245,264 +111,23 @@
    },
    "outputs": [],
    "source": [
-    "# fill missing age with median age for each title (Mr, Mrs, Miss, Others)\n",
-    "training_data[\"Age\"].fillna(training_data.groupby(\"Title\")[\"Age\"].transform(\"median\"), inplace=True)\n",
-    "testing_data[\"Age\"].fillna(testing_data.groupby(\"Title\")[\"Age\"].transform(\"median\"), inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "full[\"Age\"].fillna(full.groupby(\"Title\")[\"Age\"].transform(\"median\"), inplace=True)\n",
+    "\n",
     "#### The most embarked station is S, so it's safe to fill in nan values with S\n",
+    "full['Embarked'] = full['Embarked'].fillna('S')\n",
     "\n",
-    "- This rubs me the wrong way though, I think another column should definitely be added"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for dataset in full_data:\n",
-    "    dataset['Embarked'] = dataset['Embarked'].fillna('S')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### If a fare is missing it is replaced with the median fare for the individual's pclass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "# fill missing Fare with median fare for each Pclass\n",
-    "training_data[\"Fare\"].fillna(training_data.groupby(\"Pclass\")[\"Fare\"].transform(\"median\"), inplace=True)\n",
-    "testing_data[\"Fare\"].fillna(testing_data.groupby(\"Pclass\")[\"Fare\"].transform(\"median\"), inplace=True)"
+    "test[\"Fare\"].fillna(training_data.groupby(\"Pclass\")[\"Fare\"].transform(\"median\"), inplace=True)\n",
+    "\n",
+    "full['Cabin'] = full['Cabin'].str[:1]\n",
+    "full[\"Cabin\"].fillna(\"None\", inplace=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Cabin information from cabin data is pulled"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for dataset in full_data:\n",
-    "    dataset['Cabin'] = dataset['Cabin'].str[:1]\n",
-    "    \n",
-    "training_data[\"Cabin\"].fillna(\"None\", inplace=True)\n",
-    "testing_data[\"Cabin\"].fillna(\"None\", inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Age adjustments"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for dataset in full_data:\n",
-    "    dataset.loc[ dataset['Age'] <= 16, 'Age'] = 0,\n",
-    "    dataset.loc[(dataset['Age'] > 16) & (dataset['Age'] <= 26), 'Age'] = 1,\n",
-    "    dataset.loc[(dataset['Age'] > 26) & (dataset['Age'] <= 36), 'Age'] = 2,\n",
-    "    dataset.loc[(dataset['Age'] > 36) & (dataset['Age'] <= 62), 'Age'] = 3,\n",
-    "    dataset.loc[ dataset['Age'] > 62, 'Age'] = 4"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Fare adjustments"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for dataset in full_data:\n",
-    "    dataset.loc[ dataset['Fare'] <= 17, 'Fare'] = 0,\n",
-    "    dataset.loc[(dataset['Fare'] > 17) & (dataset['Fare'] <= 30), 'Fare'] = 1,\n",
-    "    dataset.loc[(dataset['Fare'] > 30) & (dataset['Fare'] <= 100), 'Fare'] = 2,\n",
-    "    dataset.loc[ dataset['Fare'] > 100, 'Fare'] = 3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Extra adjustments"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
-       "      <th>Title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>A/5 21171</td>\n",
-       "      <td>7.2500</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>PC 17599</td>\n",
-       "      <td>71.2833</td>\n",
-       "      <td>C</td>\n",
-       "      <td>C</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>STON/O2. 3101282</td>\n",
-       "      <td>7.9250</td>\n",
-       "      <td>None</td>\n",
-       "      <td>S</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   PassengerId  Survived  Pclass  Sex   Age  SibSp  Parch            Ticket  \\\n",
-       "0            1         0       3    0  22.0      1      0         A/5 21171   \n",
-       "1            2         1       1    1  38.0      1      0          PC 17599   \n",
-       "2            3         1       3    1  26.0      0      0  STON/O2. 3101282   \n",
-       "\n",
-       "      Fare Cabin Embarked  Title  \n",
-       "0   7.2500  None        S      0  \n",
-       "1  71.2833     C        C      2  \n",
-       "2   7.9250  None        S      1  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "None    687\n",
-       "C        59\n",
-       "B        47\n",
-       "D        33\n",
-       "E        32\n",
-       "A        15\n",
-       "F        13\n",
-       "G         4\n",
-       "T         1\n",
-       "Name: Cabin, dtype: int64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data[\"Cabin\"].value_counts()"
+    "### Cabin data"
    ]
   },
   {
@@ -514,31 +139,8 @@
    "outputs": [],
    "source": [
     "cabin_mapping = {\"None\": 0, \"C\": 1, \"B\": 2, \"D\": 3, \"E\": 4, \"A\": 5, \"F\": 5, \"G\": 5, \"T\": 5}\n",
-    "for dataset in full_data:\n",
-    "    dataset['Cabin'] = dataset['Cabin'].map(cabin_mapping)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "S    646\n",
-       "C    168\n",
-       "Q     77\n",
-       "Name: Embarked, dtype: int64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data[\"Embarked\"].value_counts()"
+    "\n",
+    "full['Cabin'] = full['Cabin'].map(cabin_mapping)"
    ]
   },
   {
@@ -569,8 +171,7 @@
    },
    "outputs": [],
    "source": [
-    "train_data = training_data.drop(['Ticket'], axis=1)\n",
-    "test_data = testing_data.drop(['Ticket'], axis=1)"
+    "full = full.drop(['Ticket'], axis=1)"
    ]
   },
   {
